# link

./: LICENSE  README.md  README.txt  argp.h  compress.c  contributors.txt  doxyfile  link.c  linkutils.h  master.c  master.h  prova_client.c  prova_server  prova_server.c  reading_files.c  readme.md  search_masters.c  server.c  sleave.c  sleave.h  test_search_master.c
Presentation slides/: Presentazione.pptx
Project report/: main.aux  main.out  main.ptc  main.tex  main.toc
Project report/Latex/: main.aux  main.dvi  main.out  main.ptc  main.tex  main.toc
doc/html/: annotated.html  argp_8h.html  argp_8h_source.html  bug.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  index.html  link_8c.html  linkutils_8h.html  linkutils_8h_source.html  master_8c.html  master_8h.html  master_8h_source.html  menudata.js  pages.html  sleave_8c.html  sleave_8h.html  sleave_8h_source.html  structargp.html  structargp__option.html  structargp__state.html  structarguments.html  structsrv.html
doc/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  (+8 more)
doc/latex/: annotated.tex  argp_8h.tex  bug.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  link_8c.tex  linkutils_8h.tex  master_8c.tex  master_8h.tex  refman.tex  sleave_8c.tex  sleave_8h.tex  structargp.tex  structargp__option.tex  structargp__state.tex  structarguments.tex  structsrv.tex
src/: CMakeCache.txt  CMakeLists.txt  Makefile  argp.h  cmake_install.cmake  link.c  linkutils.h  master.c  master.h  sleave.c
